# learnify

./: .gitignore  .gitmodules  assets_202101270632.sql  learnify.code-workspace  scripts.sql
db-migrations/: .env  Cargo.toml  insert.sql
db-migrations/migrations/2020-11-21-032656_create_categories/: down.sql  up.sql
db-migrations/src/: lib.rs  main.rs  schema.rs
docker/: .gitignore  docker-compose.yml
frontend/: package.json
frontend/components/: MessageModal.tsx
frontend/pages/: index.tsx
frontend/src/: App.vue  main.js
frontend/styles/: globals.css
frontend_vue3/: package-lock.json  package.json
frontend_vue3/src/: index.css  routes.js
game-design/: build.gradle  docker-compose.yml  settings.gradle
game-design/game/: build.gradle.kts
game-design/test/: ApplicationTest.kt
gamedesign.api/: pom.xml
gameplay/: go.sum
gameplay/entities/: game.go  player.go  quiz.go
gameplay/run/: server.go
gameplay/ucs/: create_category.go  create_game.go  find_all_categories.go  find_all_not_played_game_quizzes.go  find_quiz_by_id.go  find_quizzes_by_category_name.go  get_game_by_id.go  ports.go  validate_answer_game_quiz.go
image-downloader/: Cargo.toml  quizzes_202012061448.csv
quiz-loader/: .gitignore  Cargo.toml  catalog.csv
quiz-loader/image-downloader/: Cargo.toml
quiz-loader/image-downloader/src/: main.rs  quiz_loader.rs
sqls/: categories_202102250659.sql  quizzes_202012121858.csv  quizzes_202012121903.sql  quizzes_202102250656.sql  quizzes_insert_202101270632.sql  scripts.sql
text2mp3/: Cargo.toml
text2mp3/google-speech/: cheval.txt
(+81 files in other folders)
